--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,10 @@
-<div>
-  <a [routerLink]="['/home']">Home</a> |
-  <a [routerLink]="['/about']">About</a>
-</div>
-<div>
-  <router-outlet></router-outlet>
+<div class='container-fluid'>
+  <div class='row'>
+      <div class='col-sm-3'>
+          <app-nav-menu></app-nav-menu>
+      </div>
+      <div class='col-sm-9 body-content'>
+          <router-outlet></router-outlet>
+      </div>
+  </div>
 </div>
