--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,2 +1,2 @@
 <h1>{{ title }}</h1>
-<p>Application generated with: @angular/cli version 1.4.7</p>
+<a target="_blank" rel="noopener" href="https://github.com/ashfaqch/angular-quick-start-app">GitHub: angular-quick-start-app</a>
