--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,9 +1,2 @@
 <h1>{{ title }}</h1>
-<p>Welcome to angular quick start app!</p>
-
-<h2>Here are some links to help you start: </h2>
-<ul>
-  <li><a target="_blank" rel="noopener" href="https://angular.io/tutorial">Tour of Heroes</a></li>
-  <li><a target="_blank" rel="noopener" href="https://github.com/angular/angular-cli/wiki">CLI Documentation</a></li>
-  <li><a target="_blank" rel="noopener" href="https://blog.angular.io/">Angular blog</a></li>
-</ul>
+<p>Welcome to Angular quick start sample application!</p>
