--- a/src/app/navmenu/navmenu.component.html
+++ b/src/app/navmenu/navmenu.component.html
@@ -7,7 +7,7 @@
                 <span class='icon-bar'></span>
                 <span class='icon-bar'></span>
             </button>
-            <a class='navbar-brand' [routerLink]="['/home']">Angular Quick Start</a>
+            <a class='navbar-brand' [routerLink]="['/home']">Angular App</a>
         </div>
         <div class='clearfix'></div>
         <div class='navbar-collapse collapse'>
